--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-spring",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "react spring redux 模块化 依赖注入",
   "author": "sampsonli",
   "keywords": [
@@ -25,12 +25,15 @@
     "doc"
   ],
   "peerDependencies": {
-    "redux": ">=2.0.0",
-    "react": ">=0.14.0"
+    "react": ">=0.14.0",
+    "redux": ">=2.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.15",
+    "jest": "^26.6.3",
     "react": ">=0.14.0",
     "redux": "^2.0.0",
+    "ts-jest": "^26.4.4",
     "typescript": "^3.5.2"
   }
 }
