--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "test": "tsc ./src/test.spec.ts"
+    "test": "jest"
   },
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
