--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-spring",
-  "version": "1.2.5",
+  "version": "1.2.6",
   "description": "react spring redux 模块化 依赖注入",
   "author": "sampsonli",
   "keywords": [
@@ -23,8 +23,7 @@
   "types": "lib/index.d.ts",
   "files": [
     "lib",
-    "src",
-    "doc"
+    "src"
   ],
   "peerDependencies": {
     "react": ">=0.14.0",
