--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-spring",
-  "version": "1.2.7",
+  "version": "1.2.8",
   "description": "react spring redux 模块化 依赖注入",
   "author": "sampsonli",
   "keywords": [
@@ -17,7 +17,8 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
