--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "sourceMap": true,
     "declaration": true,
     "outDir": "lib",
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "lib": ["es2015.generator"]
   },
   "include": [
     "src/**/*"
